--- a/flask_app/templates/navbar/nav.html
+++ b/flask_app/templates/navbar/nav.html
@@ -21,7 +21,7 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
-        <a class="nav-link" href="#">
+        <a class="nav-link" href="/">
           <img
             src="{{ url_for('static', filename='/icons/home.svg') }}"
             title="Home"
