Placeholder badge page and navbar links

--- a/flask_app/templates/navbar/nav.html
+++ b/flask_app/templates/navbar/nav.html
@@ -78,8 +78,8 @@
           />
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          {% for badge in badge_names %}
-          <a class="dropdown-item" href="#">{{ badge }}</a>
+          {% for badge in badges %}
+          <a class="dropdown-item" href={{ "/badge/" + badge.id | string }}>{{ badge.name }}</a>
           {% endfor %}
         </div>
       </li>
