--- a/flask_app/templates/pages/badges.html
+++ b/flask_app/templates/pages/badges.html
@@ -1,26 +1,20 @@
-{% extends 'base.html' %}
-{% block title %}Badges{% endblock %}
-
-{% block content %}
-    <div class="">
-        {% for badge in in_progress_badges %}
-            {% include "elements/badge_card.html" %}
-        {% endfor %}
-
-        {% if complete_badges %}
-            <h3>Completed</h3>
-            {% for column in complete_badges | slice(2) %}
-            <div class="row">
-                {% for badge in column %}
-                    <div class="col">
-                        <div class="badge-icon" style="background:{{badge.colour}};">
-                            <img src={{ url_for('get_image', filename=badge.image) }}/>
-                        </div>
-                        <p class="fs-6 text-center">{{ badge.name }}</p>
-                    </div>
-                {% endfor %}
-            </div>
-            {% endfor %}
-        {% endif %}
+{% extends 'base.html' %} {% block title %}Badges{% endblock %} {% block content
+%}
+<div class="">
+  {% for badge in in_progress_badges %} {% include
+  "elements/badge_card/badge_card.html" %} {% endfor %} {% if complete_badges %}
+  <h3>Completed</h3>
+  {% for column in complete_badges | slice(2) %}
+  <div class="row">
+    {% for badge in column %}
+    <div class="col">
+      <div class="badge-icon" style="background:{{badge.colour}};">
+        <img src={{ url_for('get_image', filename=badge.image) }}/>
+      </div>
+      <p class="fs-6 text-center">{{ badge.name }}</p>
     </div>
+    {% endfor %}
+  </div>
+  {% endfor %} {% endif %}
+</div>
 {% endblock %}
