--- a/flask_app/static/style.css
+++ b/flask_app/static/style.css
@@ -8,6 +8,7 @@
   --blue2: #6ba0b0;
   --blue-dark1: #476d79;
   --blue-dark2: #2c464e;
+  --light-grey: #a8a8a8;
   --dark-grey: #595959;
 }
 
@@ -30,11 +31,6 @@ body {
   /* box-shadow: rgba(146, 251, 211, 0.607) 0px 0px 5px 10px; */
 }
 
-.centre-vertical {
-  margin-top: auto;
-  margin-bottom: auto;
-}
-
 /*  PROGRESS BARS  */
 
 .progress {
@@ -53,19 +49,14 @@ body {
   font-family: "Courier New", Courier, monospace;
   font-weight: 600;
   font-size: 3rem;
-  color: var(--blue2);
-  background-color: var(--rebel-dark-teal);
-  border-radius: 50%;
   height: 9rem;
   width: 9rem;
   text-align: center;
   line-height: 9rem;
-  box-shadow: rgba(0, 0, 0, 0.17) 0px -23px 25px 0px inset,
-    rgba(0, 0, 0, 0.15) 0px -36px 30px 0px inset,
-    rgba(0, 0, 0, 0.1) 0px -79px 40px 0px inset, rgba(0, 0, 0, 0.06) 0px 2px 1px,
-    rgba(0, 0, 0, 0.09) 0px 4px 2px, rgba(0, 0, 0, 0.09) 0px 8px 4px,
-    rgba(0, 0, 0, 0.09) 0px 16px 8px, rgba(0, 0, 0, 0.09) 0px 32px 16px;
-  text-shadow: 0 -2px rgba(1, 14, 21, 0.6);
+}
+
+#badge-table {
+  margin-top: 4rem;
 }
 
 /* FOOTER */
