--- a/flask_app/templates/pages/section.html
+++ b/flask_app/templates/pages/section.html
@@ -9,9 +9,6 @@
         {{ context.section }}
       </h1>
     </div>
-    <div class="col-1 section-percent">
-      {{context.percentage|percentage_format}}
-    </div>
     <div class="col-4">
       {% for badge in context.badges %} {% if badge.complete %}
       <svg height="50" width="50" xmlns="http://www.w3.org/2000/svg">
@@ -23,8 +20,29 @@
       </svg>
       {% endif %} {% endfor %}
     </div>
+    <div
+      class="col-1 section-percent"
+      style="border: solid 5px {{context.colour}}"
+    >
+      {{context.percentage|percentage_format}}
+    </div>
   </div>
-  {% for badge in context.badges %} {% include
-  "elements/badge_card/badge_card.html" %} {% endfor %}
+  <table id="badge-table" class="table table-dark">
+    <thead>
+      <tr>
+        <th></th>
+        <th></th>
+        <th></th>
+        <th>Rating</th>
+        <th>Notes</th>
+        <th></th>
+        <th></th>
+      </tr>
+    </thead>
+    <tbody>
+      {% for badge in context.badges %} {% include
+      "elements/badge_card/badge_card.html" %} {% endfor %}
+    </tbody>
+  </table>
 </div>
 {% endblock %}
