--- a/flask_app/templates/base.html
+++ b/flask_app/templates/base.html
@@ -16,6 +16,11 @@
     />
     <link
       rel="stylesheet"
+      type="text/css"
+      href="https://cdn.datatables.net/1.10.25/css/dataTables.bootstrap5.css"
+    />
+    <link
+      rel="stylesheet"
       href="{{ url_for('static', filename='style.css') }}"
     />
     {% block styles %} {% endblock %}
@@ -23,13 +28,29 @@
   <body class="bg-dark">
     {% include 'navbar/nav.html' %}
     <div class="container mt-5">{% block content %} {% endblock %}</div>
+    <footer class="container fs-6 sticky-bottom">
+      Uicons by <a href="https://www.flaticon.com/uicons">Flaticon</a>
+    </footer>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
       crossorigin="anonymous"
     ></script>
-    <footer class="container fs-6">
-      Uicons by <a href="https://www.flaticon.com/uicons">Flaticon</a>
-    </footer>
+    <script
+      type="text/javascript"
+      charset="utf8"
+      src="https://code.jquery.com/jquery-3.6.0.min.js"
+    ></script>
+    <script
+      type="text/javascript"
+      charset="utf8"
+      src="https://cdn.datatables.net/1.10.25/js/jquery.dataTables.js"
+    ></script>
+    <script
+      type="text/javascript"
+      charset="utf8"
+      src="https://cdn.datatables.net/1.10.25/js/dataTables.bootstrap5.js"
+    ></script>
+    {% block scripts %}{% endblock %}
   </body>
 </html>
