--- a/flask_app/templates/base.html
+++ b/flask_app/templates/base.html
@@ -15,9 +15,8 @@
       crossorigin="anonymous"
     />
     <link
+      href="https://unpkg.com/gridjs/dist/theme/mermaid.min.css"
       rel="stylesheet"
-      type="text/css"
-      href="https://cdn.datatables.net/1.10.25/css/dataTables.bootstrap5.css"
     />
     <link
       rel="stylesheet"
@@ -36,21 +35,8 @@
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
       crossorigin="anonymous"
     ></script>
-    <script
-      type="text/javascript"
-      charset="utf8"
-      src="https://code.jquery.com/jquery-3.6.0.min.js"
-    ></script>
-    <script
-      type="text/javascript"
-      charset="utf8"
-      src="https://cdn.datatables.net/1.10.25/js/jquery.dataTables.js"
-    ></script>
-    <script
-      type="text/javascript"
-      charset="utf8"
-      src="https://cdn.datatables.net/1.10.25/js/dataTables.bootstrap5.js"
-    ></script>
+
+    <script src="https://unpkg.com/gridjs/dist/gridjs.umd.js"></script>
     {% block scripts %}{% endblock %}
   </body>
 </html>
