--- a/flask_app/templates/base.html
+++ b/flask_app/templates/base.html
@@ -20,7 +20,7 @@
     />
     <link
       rel="stylesheet"
-      href="{{ url_for('static', filename='style.css') }}"
+      href="{{ url_for('static', filename='/css/style.css') }}"
     />
     {% block styles %} {% endblock %}
   </head>
