--- a/flask_app/templates/navbar/nav.html
+++ b/flask_app/templates/navbar/nav.html
@@ -1,5 +1,8 @@
 {% block styles %}
-<link rel="stylesheet" href="{{ url_for('static', filename='nav.css') }}" />
+<link
+  rel="stylesheet"
+  href="{{ url_for('static', filename='/css/nav.css') }}"
+/>
 {% endblock %}
 
 <nav class="navbar navbar-expand-lg navbar-dark sticky-top">
