--- a/flask_app/templates/pages/badge.html
+++ b/flask_app/templates/pages/badge.html
@@ -1,3 +1,62 @@
 {% extends 'base.html' %} {% block content %}
-<h2>{{ badge.name }}</h2>
+<div class="row">
+  <div class="col">
+    <h1
+      class="heading-tab row gap-5"
+      style="background: {{badge.colour}}; box-shadow: {{badge.colour|adjust_colour(1.1)}} 0px 0px 5px 10px;"
+    >
+      <div class="badge-icon" style="background:{{badge.colour}};">
+        <img src={{ url_for('get_image', filename=badge.image) }}/>
+      </div>
+      {{badge.name}}
+    </h1>
+  </div>
+  <div class="col">
+    <div id="badge-details" class="card" style="width: 18rem">
+      <ul class="list-group list-group-flush">
+        <li class="list-group-item">Volume {{ badge.book }}</li>
+        <li class="list-group-item">{{ badge.section }}</li>
+        <li class="list-group-item">
+          <select class="ratingSelect form-select" data-column-id="rating">
+            <option value="None">None</option>
+            <option value="✖️">✖️</option>
+            <option value="🟢">🟢</option>
+            <option value="🟡">🟡</option>
+            <option value="🟠">🟠</option>
+            <option value="🔴">🔴</option>
+          </select>
+        </li>
+      </ul>
+    </div>
+  </div>
+</div>
+<div class="row"></div>
+{% endblock %} {% block scripts %}
+<script>
+  const ratingSelect = document.getElementsByClassName("ratingSelect");
+
+  Array.from(ratingSelect).forEach((element) => {
+    element.value = "{{badge.rating}}";
+  });
+
+  const badgeDetails = document.getElementById("badge-details");
+  badgeDetails.addEventListener("focusout", (ev) => {
+    const newValue = ev.target.value;
+    const badgeId = "{{badge.id}}";
+    console.log("NEW VALUE: " + newValue);
+
+    if (newValue) {
+      if ("{{badge.rating}}" !== newValue) {
+        fetch(`http://127.0.0.1:5000/badge/${badgeId}`, {
+          method: "POST",
+          headers: { "Content-Type": "application/json" },
+          body: JSON.stringify({
+            id: badgeId,
+            [ev.target.dataset.columnId]: newValue,
+          }),
+        });
+      }
+    }
+  });
+</script>
 {% endblock %}
