--- a/flask_app/templates/pages/badge.html
+++ b/flask_app/templates/pages/badge.html
@@ -26,8 +26,8 @@
             <option value="🔴">🔴</option>
           </select>
         </li>
-        <li id="notesListItem" class="list-group-item">
-            <label>Notes</label>
+        <li class="list-group-item notes">
+          <label>Notes</label>
           <textarea
             rows="4"
             cols="50"
@@ -35,13 +35,41 @@
             data-element-id="{{badge.id}}"
           >
 {{badge.notes}}</textarea
-          
+          >
         </li>
       </ul>
     </div>
   </div>
 </div>
-<div class="row"></div>
+<div class="row pt-5">
+  <table id="clause-table" class="table table-dark">
+    {% for clause in clauses %}
+    <tr>
+      <td>
+        <div class="form-check">
+          <input
+            class="form-check-input"
+            type="checkbox"
+            value="{{clause.complete}}"
+            id="flexCheckDefault"
+            data-clause-id="{{clause.id}}"
+          />
+        </div>
+      </td>
+      <td>{{clause.description}}</td>
+      <td>
+        <input
+          id="completeDate"
+          class="form-control"
+          type="date"
+          value="{{clause.date}}"
+          data-clause-id="{{clause.id}}"
+        />
+      </td>
+    </tr>
+    {% endfor %}
+  </table>
+</div>
 {% endblock %} {% block scripts %}
 <script>
   const ratingSelect = document.getElementsByClassName("ratingSelect");
@@ -54,20 +82,48 @@
   badgeDetails.addEventListener("focusout", (ev) => {
     const newValue = ev.target.value;
     const badgeId = "{{badge.id}}";
-    console.log("NEW VALUE: " + newValue);
 
-    if (newValue) {
-      if ("{{badge.rating}}" !== newValue) {
-        fetch(`http://127.0.0.1:5000/badge/${badgeId}`, {
-          method: "POST",
-          headers: { "Content-Type": "application/json" },
-          body: JSON.stringify({
-            id: badgeId,
-            [ev.target.dataset.columnId]: newValue,
-          }),
-        });
-      }
+    if ("{{badge.rating}}" !== newValue && "{{badge.notes}}" !== newValue) {
+      fetch(`http://127.0.0.1:5000/badge/${badgeId}`, {
+        method: "POST",
+        headers: { "Content-Type": "application/json" },
+        body: JSON.stringify({
+          id: badgeId,
+          [ev.target.dataset.columnId]: newValue,
+        }),
+      });
     }
   });
+
+  const checkboxes = document.querySelectorAll("input[type=checkbox]");
+  Array.from(checkboxes).forEach((element) =>
+    element.addEventListener("change", function (ev) {
+      const clauseId = ev.target.dataset.clauseId;
+      fetch(`http://127.0.0.1:5000/clause/${clauseId}`, {
+        method: "POST",
+        headers: { "Content-Type": "application/json" },
+        body: JSON.stringify({
+          id: clauseId,
+          ["complete"]: ev.target.checked,
+        }),
+      });
+    })
+  );
+
+  const datePickers = document.querySelectorAll("input[type=date]");
+  Array.from(datePickers).forEach((element) =>
+    element.addEventListener("change", function (ev) {
+      const clauseId = ev.target.dataset.clauseId;
+      fetch(`http://127.0.0.1:5000/clause/${clauseId}`, {
+        method: "POST",
+        headers: { "Content-Type": "application/json" },
+        body: JSON.stringify({
+          id: clauseId,
+          ["date"]: ev.target.value,
+        }),
+      });
+    })
+  );
 </script>
+
 {% endblock %}
