Fix problem with dates not displaying in date pickers

--- a/flask_app/templates/pages/badge.html
+++ b/flask_app/templates/pages/badge.html
@@ -60,9 +60,9 @@
       <td>
         <input
           id="completeDate"
-          class="form-control"
+          class="form-control w-50"
           type="date"
-          value="{{clause.date}}"
+          value="{{clause.date|date_format}}"
           data-clause-id="{{clause.id}}"
         />
       </td>
