Fixing checkbox logic bugs

--- a/flask_app/templates/pages/badge.html
+++ b/flask_app/templates/pages/badge.html
@@ -47,13 +47,9 @@
     <tr>
       <td>
         <div class="form-check">
-          <input
-            class="form-check-input"
-            type="checkbox"
-            value="{{clause.complete}}"
-            id="flexCheckDefault"
-            data-clause-id="{{clause.id}}"
-          />
+          <input class="form-check-input" type="checkbox" id="flexCheckDefault"
+          data-clause-id="{{clause.id}}" {{ 'checked="checked"' if
+          clause.complete }} />
         </div>
       </td>
       <td>{{clause.description}}</td>
